# mreact

./: .gitignore  README.md  flake.nix  mise.toml  mreact.cabal  package.json
.github/workflows/: ci.yml
app/: Main.hs
app/Examples/: Counter.hs  DeferredValue.hs  TodoApp.hs
examples/: Counter.hs  DeferredValue.hs  TodoApp.hs  UseCallback.hs  UseContext.hs  UseId.hs  UseMemo.hs  UseRef.hs  UseTransition.hs
src/: MReact.hs
src/MReact/: Browser.hs  Component.hs  DOM.hs  Fiber.hs  Hooks.hs  Indexed.hs  Prelude.hs  Types.hs  VDOM.hs
src/MReact/Fiber/: Diff.hs
src/MReact/Hooks/: Async.hs  Context.hs  Effect.hs  Id.hs  Memo.hs  Ref.hs  State.hs  Transition.hs
src/MReact/Runtime/: Fiber.hs  Scheduler.hs
src/MReact/VDOM/: Diff.hs
